Add light documentation

--- a/data/download_ceda_sic.ipynb
+++ b/data/download_ceda_sic.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7970f4e7-f222-49b7-824c-9d94823a4c4a",
+   "metadata": {},
+   "source": [
+    "### Download ESA SIC data from CEDA & store in zarr."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "ccff4dbb-56f7-410c-9cc8-9c708b683ca2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Zach/miniforge3/lib/python3.9/site-packages/xarray/backends/cfgrib_.py:27: UserWarning: Failed to load cfgrib - most likely there is a problem accessing the ecCodes library. Try `import cfgrib` to get the full error message\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -27,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "25562de1-5cf0-4484-9007-7b46c2314532",
    "metadata": {},
    "outputs": [
@@ -146,22 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "19bb99f4-44c3-49f5-8b1c-d12289402767",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'logging' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m log_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhistory.log\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mlogging\u001b[49m\u001b[38;5;241m.\u001b[39mbasicConfig(filename\u001b[38;5;241m=\u001b[39mlog_filename,\n\u001b[1;32m      3\u001b[0m                             filemode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      4\u001b[0m                             \u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%(asctime)s\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;132;01m%(msecs)d\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m%(name)s\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m%(levelname)s\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m%(message)s\u001b[39;00m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      5\u001b[0m                             datefmt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      6\u001b[0m                             level\u001b[38;5;241m=\u001b[39mlogging\u001b[38;5;241m.\u001b[39mINFO\n\u001b[1;32m      7\u001b[0m                    )\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(log_filename):\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(log_filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fp:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'logging' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "log_filename = 'history.log'\n",
     "logging.basicConfig(filename=log_filename,\n",
@@ -182,7 +187,7 @@
     "    'algorithm_standard_error',\n",
     "]\n",
     "\n",
-    "aoi = gpd.read_file('aoi')\n",
+    "aoi = gpd.read_file('aoi')  # This is our area of interest.\n",
     "\n",
     "def get_all_files_by_month(start_date=datetime.datetime(2015, 1, 1), end_date=datetime.datetime(2015, 6, 1)):\n",
     "    \"\"\"Generate list of CEDA OpenDAP SIC files split by month\"\"\"\n",
@@ -225,14 +230,6 @@
     "    else:\n",
     "        return ds_list"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6e2ee19a-7f7e-4b5f-a98d-c587fdb4ce48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -301,6 +298,14 @@
     "    i += 1\n",
     "        \n",
     "logging.info(f'...finished process.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68a865ef-0769-4052-8666-c5df5378bad4",
+   "metadata": {},
+   "source": [
+    "### Testing"
    ]
   },
   {
@@ -903,33 +908,6 @@
    ],
    "source": [
     "ds.rio.clip(aoi.geometry)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "7d3b3e0c-e09c-4c65-ac0b-d0c45bfa1be1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['time_bnds',\n",
-       " 'ice_conc',\n",
-       " 'raw_ice_conc_values',\n",
-       " 'total_standard_error',\n",
-       " 'smearing_standard_error',\n",
-       " 'algorithm_standard_error',\n",
-       " 'status_flag']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(ds.data_vars)"
    ]
   }
  ],
