--- a/data/era5.ipynb
+++ b/data/era5.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "944f46d8-4664-43dc-b916-cc54cd7ffbf9",
+   "metadata": {},
+   "source": [
+    "### Download ERA5 data from CDS using the API. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "88b1d244-b804-4f69-a8d6-2f2f05ff6010",
@@ -1775,40 +1783,6 @@
     "    bbox=bbox,\n",
     ")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "861220f4-d634-4a95-80f7-7e3f6ae5fd20",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method retrieve in module cdsapi.api:\n",
-      "\n",
-      "retrieve(name, request, target=None) method of cdsapi.api.Client instance\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import cdsapi\n",
-    "client = cdsapi.Client()\n",
-    "help(client.retrieve)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a95073f-8370-4795-879d-aaab68f740a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# landmask\n",
-    "# additive degree days (ADD) derived from the t2m variable"
-   ]
   }
  ],
  "metadata": {
@@ -1827,7 +1801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
