--- a/data/make_gif.ipynb
+++ b/data/make_gif.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ae2b9947-9cc6-44e8-8b6d-61287c93cf87",
+   "metadata": {},
+   "source": [
+    "### Visualize ESA SIC vs. ERA5 SIC\n",
+    "This notebook creates a gif of ESA SIC and ERA5 SIC side-by-side to compare."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b2aa7127-8fbe-483d-be99-af76474ed949",
@@ -86,28 +95,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "e9979fcd-cf0e-4ade-b3b0-8e79d26cd085",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(1.)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "np.min(ds.ceda_sic_bin).values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
    "id": "83069a03-ac66-4f29-a169-7b3d7154c075",
    "metadata": {},
@@ -150,10 +137,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Write GIF\n",
     "with imageio.get_writer('gif/esa.gif', mode='I') as writer:\n",
     "    for filename in natural_sort(glob.glob('gif/esa*.jpg')):\n",
     "        image = imageio.imread(filename)\n",
     "        writer.append_data(image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d014b80-cb96-4253-a6a1-c0afbca90f11",
+   "metadata": {},
+   "source": [
+    "### Visualize a few ERA5 variables"
    ]
   },
   {
