--- a/results/figs.ipynb
+++ b/results/figs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1f4d4e53-03c3-47c7-bb1a-60cd46989256",
+   "metadata": {},
+   "source": [
+    "## Generating figures"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "37ac633c-9720-41d4-9fe7-2ba781296207",
